tests/expect/error/on-output/access-symbol-from-inner-scope-in-outer.nva
// it is not possible to access a symbol from an inner scope
if true {
    inner := "inner";
}

print(inner);